fix: update Akan name section header and adjust font size for better visibility

--- a/style.css
+++ b/style.css
@@ -121,8 +121,8 @@ table {
   font-size: large;
 }
 
-#akanName {
-  font-size: 24px;
+#akan-name {
+  font-size: xx-large;
   font-weight: bold;
   color: #2f2f2f;
   font-family: "Trade Winds", system-ui;
